changed a bug where if you would hover over the button it would become white so that it is very hard to see and made the colors like the official CES website

--- a/Event_Styles.css
+++ b/Event_Styles.css
@@ -38,7 +38,7 @@ div_registration {
 button {
     font-family: Vremena Grotesk, sans-serif;
     color: white;
-    background-color: blue;
+    background-color: #455fe3;
     padding: 10px 20px;
     font-size: 16px;
     cursor: pointer;
@@ -47,7 +47,7 @@ button {
 }
 
 button:hover {
-    background-color: white;
+    background-color: #506ce6;
 }
 button:active {
     background-color: red;
